# transparencia-rpa

./: README.md  pyproject.toml
app/: automation.py  main.py  rq.py
app/schemas/: main.py
